--- a/style.css
+++ b/style.css
@@ -44,3 +44,9 @@
 .work-screenshot {
     border-radius: 50% 20% / 10% 40%;
 }
+
+.portfolio {
+    margin-top: 120px;
+    margin-bottom: 40px;
+    font-size: 44pt;
+}
