--- a/style.css
+++ b/style.css
@@ -14,9 +14,41 @@
     padding: 0 20px 0 10px;
 }
 
+a .footer {
+    text-decoration: none;
+    color: black;
+}
 
-@media  {
-    
+button {
+    display: block;
+    margin: 0px auto;
+  }
+
+
+@media  (max-width:900px) {
+    h1 {
+        text-align: center;
+    }
+
+    .frontpage {
+        border-bottom: none;
+        margin: 0px auto;
+        display: block;
+        margin-top: 100px;
+    }
+
+  .subline {
+    margin-top: 1px;
+    text-align: center;
+    border-bottom: none;
+  }   
+
+  .portrait {
+    margin: 0px auto;
+    display: block;
+    margin-bottom: 50px;
+    margin-top: 20px;
+  }
 }
 
 .portrait {
@@ -51,4 +83,9 @@
     margin-top: 120px;
     margin-bottom: 40px;
     font-size: 44pt;
+}
+
+.contact-section {
+    margin-top: 200px;
+    margin-bottom: 150px;
 }
