--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ button {
 
 
 @media  (max-width:900px) {
-    h1 {
+    h1, .contact-links, .portfolio-section {
         text-align: center;
     }
 
@@ -49,6 +49,17 @@ button {
     margin-bottom: 50px;
     margin-top: 20px;
   }
+
+  .footnote {
+    padding:0 10px 0 10px;
+  }
+
+    .work-screenshot {
+        margin-top: 50px;
+    }
+  
+
+  
 }
 
 .portrait {
@@ -65,12 +76,11 @@ button {
 }
 
 .footnote {
-    font-size: 10px;
+    font-size: 11px;
     text-align: center;
     margin-top: 80px;
     margin-bottom: 40px;
     font-family: 'Courier New', Courier, monospace;
-
 }
 
 .work-screenshot {
@@ -88,4 +98,8 @@ button {
 .contact-section {
     margin-top: 200px;
     margin-bottom: 150px;
+}
+
+.contact-links {
+    padding: 30px 0 20px 0;
 }
