--- a/style.css
+++ b/style.css
@@ -14,9 +14,13 @@
     padding: 0 20px 0 10px;
 }
 
-a .footer {
-    text-decoration: none;
-    color: black;
+a {
+    text-decoration: none!important;
+    color: black!important;
+}
+
+a:hover {
+color: steelblue!important;
 }
 
 button {
@@ -56,6 +60,9 @@ button {
 
     .work-screenshot {
         margin-top: 50px;
+    }
+
+    .contact-medium {
     }
   
 
@@ -102,4 +109,20 @@ button {
 
 .contact-links {
     padding: 30px 0 20px 0;
+    margin-top: 40px;
+}
+
+.contact-medium {
+    padding-right: 20px;
+    display: inline;
+}
+
+.contact-icon {
+    padding: 5px;
+}
+
+.contact-icon:hover {
+    border: 1px solid steelblue;
+    border-radius: 20%;
+    background-color: steelblue;
 }
