--- a/style.css
+++ b/style.css
@@ -136,8 +136,11 @@ a {
 }
 
 .portfolio {
+    padding: 0 20px 0 10px;
+    font-size: 32pt;
+    margin-left: 60px;
     margin-top: 120px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
     font-size: 44pt;
     text-shadow: 4px 4px 0px rgba(0,0,0,0.2);
 }
